# Pathfinder-Listops

./: .gitignore  README.md  pyproject.toml
notebooks/: pathfinder.ipynb
snakes/: generate_and_clean.sh  get_parameters.py  main_generation.py  snakes.py  snakes2.py  snakes2_wrapper.py  snakes_wrapper.py
