[tool.poetry]
name = "pathfinder-listops"
version = "0.1.0"
description = ""
authors = ["nasonov.ivan5 <nasonov.ivan5@wb.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
numpy = "1.26.1"
opencv-python = "^4.10.0.84"
imageio = "2.34.1"
scikit-image = "0.24.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
